<resources>
    <string name="app_name" translatable="false">RemoteLight</string>
    <string name="title_outputs">Outputs</string>
    <string name="title_colors">Colors</string>
    <string name="title_animations">Animations</string>
    <string name="title_scenes">Scenes</string>
    <string name="title_musicsync">MusicSync</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <string name="nav_header_title">RemoteLight</string>
    <string name="nav_header_subtitle">LED Control Software</string>
    
    <string name="title_add_output">Add a new output</string>
    <string name="title_serial">Serial</string>
    <string name="title_glediator">Glediator</string>
    <string name="title_network">Network</string>
    <string name="title_artnet">Art-Net</string>
    <string name="title_e131">E1.31</string>
    <string name="title_virtual">Virtual</string>
    <string name="title_chain">Chain</string>
    <string name="title_multi">Multi</string>
    <string name="title_rlserver">RemoteLightServer</string>
    <string name="title_output_patch">Output patch</string>

    <string name="label_brightness">Brightness</string>
    <string name="label_speed">Speed</string>
    <string name="label_name">Name</string>
    <string name="label_pixels">Pixels</string>
    <string name="label_rgb_order">RGB Order</string>
    <string name="label_patch_shift_pixels">Shift pixels</string>
    <string name="label_patch_clone">Clone</string>
    <string name="label_patch_mirror">Mirror</string>
    <string name="label_com_port">Serial port</string>

    <string name="error_no_comports">No serial ports found.</string>
    <string name="error_id_already_used">The name is already in use</string>
    <string name="desc_close_dialog">Close dialog</string>

    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">Ok</string>
</resources>