<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="de.remotelight.mobile.ui.main.MainFragment"
        android:label="@string/title_outputs"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_colors"
        android:name="de.remotelight.mobile.ui.colors.ColorsFragment"
        android:label="@string/title_colors"
        tools:layout="@layout/fragment_colors" />

    <fragment
        android:id="@+id/nav_animations"
        android:name="de.remotelight.mobile.ui.animations.AnimationsFragment"
        android:label="@string/title_animations"
        tools:layout="@layout/fragment_animations" />

    <fragment
        android:id="@+id/nav_scenes"
        android:name="de.remotelight.mobile.ui.scenes.ScenesFragment"
        android:label="@string/title_scenes"
        tools:layout="@layout/fragment_scenes" />

    <fragment
        android:id="@+id/nav_musicsync"
        android:name="de.remotelight.mobile.ui.musicsync.MusicSyncFragment"
        android:label="@string/title_musicsync"
        tools:layout="@layout/fragment_musicsync" />

</navigation>